test/corpus/onbuild.txt
==================
Simple add
==================

ONBUILD ADD . /app/src

---

(source_file
  (onbuild_instruction
    (add_instruction
      (path)
      (path))))

==================
Simple run
==================

ONBUILD RUN /usr/local/bin/python-build --dir /app/src

---

(source_file
  (onbuild_instruction
    (run_instruction
      (shell_command))))
