test/corpus/run.txt
==================
Shell command
==================

RUN echo "test"

---

(source_file
  (run_instruction
    (shell_command)))

==================
Shell command multiline
==================

RUN echo "test" \
	"foo" \
	bar


---

(source_file
  (run_instruction
    (shell_command
      (line_continuation)
      (line_continuation))))

==================
Shell command multiline with blank continuation lines
==================

RUN foo \

bar \

baz

---

(source_file
  (run_instruction
    (shell_command
      (line_continuation)
      (line_continuation))))

==================
Shell command multiline space after continuation
==================

RUN echo "test" \ 
	echo "foo"

---

(source_file
  (run_instruction
    (shell_command
      (line_continuation))))

==================
Run with shell empty array
==================

run []

---

(source_file
  (run_instruction
    (json_string_array)))

==================
Run with shell array
==================

run ["echo", "test"]

---

(source_file
  (run_instruction
    (json_string_array
      (json_string)
      (json_string))))

==================
Run with multiline JSON array
==================

RUN ["echo", \
  "ok"]

---

(source_file
  (run_instruction
    (json_string_array
      (json_string)
      (line_continuation)
      (json_string))))

==================
Run falls back for unterminated JSON string
==================

RUN ["echo", "look ma, no quote!]

---

(source_file
  (run_instruction
    (shell_command)))

==================
Run with options
==================

run --mount=type=secret,id=aws,target=/root/.aws/credentials \
    --security=insecure \
  aws s3 cp s3://example.com

---

(source_file
  (run_instruction
    (mount_param
      (mount_param_param)
      (mount_param_param)
      (mount_param_param))
    (line_continuation)
    (param)
    (line_continuation)
    (shell_command)))

==================
Run with valueless mount option
==================

RUN --mount=type=bind,source=rewrites,target=/rewrites,readonly \
  ./striptests

---

(source_file
  (run_instruction
    (mount_param
      (mount_param_param)
      (mount_param_param)
      (mount_param_param)
      (mount_param_param))
    (line_continuation)
    (shell_command)))

==================
Run with hash inside quoted shell fragment
==================

RUN echo "#! /bin/bash\n\n# script to activate the environment" > ~/.bashrc

---

(source_file
  (run_instruction
    (shell_command)))

==================
Run with escaped quotes inside quoted shell fragment
==================

RUN echo "say \"hi\""

---

(source_file
  (run_instruction
    (shell_command)))

==================
Run with continuation inside quoted shell fragments
==================

RUN sh -c 'echo root:testpass \
    > /tmp/passwd'
RUN sh -c "echo root:testpass \
    > /tmp/passwd"

---

(source_file
  (run_instruction
    (shell_command
      (line_continuation)))
  (run_instruction
    (shell_command
      (line_continuation))))

==================
Run with heredoc
==================

RUN cat <<EOF
test
EOF

---

(source_file
  (run_instruction
    (shell_command
      (heredoc_marker))
    (heredoc_block
      (heredoc_end))))

==================
Multiple runs stay separate shell commands (issue #27)
==================

RUN chmod +x \
    /entrypoints/kafka-consumer.sh \
    /entrypoints/migrations.sh

COPY . /app

RUN bundle install --jobs $(nproc)

---

(source_file
  (run_instruction
    (shell_command
      (line_continuation)
      (line_continuation)))
  (copy_instruction
    (path)
    (path))
  (run_instruction
    (shell_command)))
