test/corpus/stopsignal.txt
==================
Integer
==================

STOPSIGNAL 9

---

(source_file
  (stopsignal_instruction))

==================
Signal name
==================

STOPSIGNAL SIGKILL

---

(source_file
  (stopsignal_instruction))

==================
Real-time signal with offset
==================

STOPSIGNAL SIGRTMIN+3

---

(source_file
  (stopsignal_instruction))

==================
Real-time max signal with offset
==================

STOPSIGNAL SIGRTMAX-1

---

(source_file
  (stopsignal_instruction))

==================
Quoted signal name
==================

STOPSIGNAL "SIGINT"

---

(source_file
  (stopsignal_instruction
    (double_quoted_string)))

=========================================================
Signal value with expansions
=========================================================

STOPSIGNAL A$BC${DE}F

---

(source_file
  (stopsignal_instruction
    (expansion
      (variable))
    (expansion
      (variable))))

=========================================================
No space in signal value
=========================================================

STOPSIGNAL A B

---

(source_file
  (stopsignal_instruction)
  (ERROR))

=========================================================
No space in signal value before expansion
=========================================================

STOPSIGNAL A $B

---

(source_file
  (stopsignal_instruction
    (ERROR)
    (expansion
      (variable))))

=========================================================
No space in signal value within expansion
=========================================================

STOPSIGNAL A$ B

---

(source_file
  (stopsignal_instruction)
  (ERROR))
